--- a/index.html
+++ b/index.html
@@ -4,92 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Fit mit Helia</title>
-   <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #f9f9f9;
-      color: #333;
-      line-height: 1.6;
-    }
-
-    nav {
-      background-color: #333;
-    }
-
-    nav ul {
-      display: flex;
-      justify-content: center;
-      list-style: none;
-      margin: 0;
-      padding: 10px;
-    }
-
-    nav ul li {
-      margin: 0 15px;
-    }
-
-    nav ul li a {
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    header {
-      text-align: center;
-      padding: 60px 20px;
-      background-color: #306fb9;
-      color: white;
-    }
-
-    section {
-      max-width: 1000px;
-      margin: auto;
-      padding: 40px 20px;
-    }
-
-    h2 {
-      color: #306fb9;
-      margin-bottom: 20px;
-      text-align: center;
-    }
-
-    .galerie {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      justify-content: center;
-    }
-
-    .galerie img {
-      max-width: 250px;
-      width: 100%;
-      height: auto;
-      object-fit: contain;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    }
-
-    @media (max-width: 768px) {
-      .galerie img {
-        max-width: 100%;
-      }
-    }
-
-    footer {
-      background-color: #333;
-      color: white;
-      text-align: center;
-      padding: 20px;
-    }
-
-    .kontakt a {
-      color: #306fb9;
-      text-decoration: none;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
 
 <nav>
   <ul>
@@ -99,12 +17,7 @@
   </ul>
 </nav>
 
-%<header id="start">
-%  <h1>Fit mit Helia</h1>
-%  <p>Personal Training & Gruppencoaching mit Helia Shafigh</p>
-%</header>
-
-  <header>
+<header id="start">
   <h1>Fit mit Helia</h1>
   <p>Personal Training & Gruppencoaching mit Helia Shafigh</p>
 </header>
