--- a/ueber-mich.html
+++ b/ueber-mich.html
@@ -52,7 +52,7 @@
 
 <!-- Neuer Abschnitt: Einblicke in mein Training -->
 <section>
-  <h2 style="color: #306fb9; text-align: center; margin-bottom: 20px;">Einblicke in mein Training</h2>
+  <h2 style="color: #7a977a; text-align: center; margin-bottom: 20px;">Einblicke in mein Training</h2>
   <div class="galerie">
     <img src="images/h1.jpeg" alt="Training 1" >
     <img src="images/h2.jpeg" alt="Training 2" >
