--- a/impressum.html
+++ b/impressum.html
@@ -4,68 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Impressum – Fit mit Helia</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #f9f9f9;
-      color: #333;
-      line-height: 1.6;
-    }
-
-    nav {
-      background-color: #333;
-    }
-
-    nav ul {
-      display: flex;
-      justify-content: center;
-      list-style: none;
-      margin: 0;
-      padding: 10px;
-    }
-
-    nav ul li {
-      margin: 0 15px;
-    }
-
-    nav ul li a {
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    header {
-      text-align: center;
-      padding: 60px 20px;
-      background-color: #e67e22;
-      color: white;
-    }
-
-    main {
-      max-width: 900px;
-      margin: auto;
-      padding: 40px 20px;
-    }
-
-    h1 {
-      color: #e67e22;
-      margin-bottom: 30px;
-    }
-
-    a {
-      color: #e67e22;
-      text-decoration: none;
-    }
-
-    footer {
-      background-color: #333;
-      color: white;
-      text-align: center;
-      padding: 20px;
-      margin-top: 40px;
-    }
-  </style>
+  <title>Über mich</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
