--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@
 
   <h3>Gruppentraining (Outdoor Kurse)</h3>
   <ul>
-    <li><a href="cross-training.html">Cross Training</a></li>
-    <li><a href="krafttraining.html">Krafttraining</a></li>
-    <li>Bodyweight HIIT</li>
+    <li><a href="https://www.tu-sport.de/sportprogramm/kurse/?tx_dwzeh_courses%5Baction%5D=show&tx_dwzeh_courses%5BsportsDescription%5D=1570&cHash=15b3be6dfad3a0bc6b11c879d441561a" target="_blank" rel="noopener noreferrer">Cross Training</a></li>
+    <li><a href="https://www.tu-sport.de/sportprogramm/kurse/?tx_dwzeh_courses%5Baction%5D=show&tx_dwzeh_courses%5BsportsDescription%5D=1640&cHash=186b46ddfcd3d434ec611de50e490e05" target="_blank" rel="noopener noreferrer">Krafttraining</a></li>
   </ul>
   <p>Neuer Zyklus ab dem 21. Juli 2025. Für Details klicke auf den jeweiligen Kurs!</p>
 </section>
