--- a/impressum.html
+++ b/impressum.html
@@ -18,11 +18,12 @@
 
 <header>
   <h1>Impressum</h1>
-  <p>Angaben gemäß § 5 TMG</p>
 </header>
 
-<main>
-  <p><strong>Helia Shafigh</strong><br>
+
+  <section id="leistungen">
+    <h2>Angaben gemäß § 5 TMG</h2>
+  <h3>Helia Shafigh</h3>
   Personal Trainerin<br>
   Elberfelder Str. 3<br>
   10555 Berlin<br>
@@ -38,7 +39,7 @@
 
   <p><strong>Haftungsausschluss:</strong><br>
   Trotz sorgfältiger inhaltlicher Kontrolle übernehme ich keine Haftung für die Inhalte externer Links. Für den Inhalt der verlinkten Seiten sind ausschließlich deren Betreiber verantwortlich.</p>
-</main>
+</section>
 
 <footer>
   <p>&copy; 2025 Fit mit Helia – Alle Rechte vorbehalten | <a href="impressum.html">Impressum</a></p>
