--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <li>Online-Coaching</li>
   </ul>
 
-  <h3>Gruppentraining (Outdoor Kurse)</h3>
+  <h3>Gruppentraining</h3>
   <ul>
     <li><a href="https://www.tu-sport.de/sportprogramm/kurse/?tx_dwzeh_courses%5Baction%5D=show&tx_dwzeh_courses%5BsportsDescription%5D=1570&cHash=15b3be6dfad3a0bc6b11c879d441561a" target="_blank" rel="noopener noreferrer">Cross Training</a></li>
     <li><a href="https://www.tu-sport.de/sportprogramm/kurse/?tx_dwzeh_courses%5Baction%5D=show&tx_dwzeh_courses%5BsportsDescription%5D=1640&cHash=186b46ddfcd3d434ec611de50e490e05" target="_blank" rel="noopener noreferrer">Krafttraining</a></li>
