--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <li>Ernährungsberatung</li>
     <li>Online-Coaching</li>
   </ul>
+   <p>In der Mittelstr. 34, Steglitz, oder bei Bedarf an einem anderen Ort wie draußen im Park oder bei dir zu Hause (ggs. zzgl. Fahrtkosten).</p>
 
   <h3>Gruppentraining</h3>
   <ul>
