--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 <section id="leistungen">
   <h2>Meine Leistungen</h2>
 
-  <h3>Personal Training (1:1) (60€/h)</h3>
+  <h3>Personal Training (1:1) (70€/h)</h3>
   <ul>
     <li>Krafttraining & Langhanteltraining</li>
     <li>Muskelaufbau & Hypertrophietraining</li>
-    <li>Funktionelles Training mit dem eigenen Körpergewicht</li>
+    <li>Funktionale Fitness</li>
     <li>HIIT und Konditionstraining</li>
     <li>Hyrox Vorbereitung</li>
     <li>Gewichtsreduktion</li>
@@ -74,6 +74,7 @@
 
 </body>
 </html>
+
 
 
 
