--- a/ueber-mich.html
+++ b/ueber-mich.html
@@ -38,7 +38,8 @@
   <ul>
     <li>Fitnesstrainer A-Lizenz</li>
     <li>Fitnesstrainer B-Lizenz</li>
-    <li>Mehrjährige Erfahrung im Gruppencoaching</li>
+    <li>Mehrjährige Erfahrung im Coaching</li>
+    <li>Wettkampferfahrung im CrossFit und Kraftdreikampf</li>
     <li>Eigene intensive Trainingspraxis & tiefes Verständnis für individuelle Herausforderungen</li>
   </ul>
 </section>
