--- a/ueber-mich.html
+++ b/ueber-mich.html
@@ -39,7 +39,7 @@
     <li>Fitnesstrainer A-Lizenz</li>
     <li>Fitnesstrainer B-Lizenz</li>
     <li>Mehrjährige Erfahrung im Coaching</li>
-    <li>Wettkampferfahrung im CrossFit und Kraftdreikampf</li>
+    <li>Wettkampferfahrung im CrossFit, Kraftdreikampf und Hyrox</li>
     <li>Eigene intensive Trainingspraxis & tiefes Verständnis für individuelle Herausforderungen</li>
   </ul>
 </section>
