--- a/ueber-mich.html
+++ b/ueber-mich.html
@@ -20,17 +20,24 @@
   <h1>Über mich</h1>
 </header>
 
-<section>
+<section class="ueber-mich">
   <h2>Über mich</h2>
-  <p>
-    Ich bin seit über drei Jahren als Trainerin im Bereich Cross Training, HIIT, funktionales Training und Langhanteltraining tätig. Meine eigene Leidenschaft gilt dem CrossFit und Kraftdreikampf – ich lebe, was ich coache.
-  </p>
-  <p>
-    Aktuell arbeite ich hauptberuflich als Mathematikerin in der Forschung – das heißt: analytisches Denken, Struktur und Präzision gehören ebenso zu mir wie Motivation, Begeisterung und Power. Außerdem war ich vier Jahre lang Mathematik-Tutorin an der Technischen Universität Berlin und 10 Jahre private Nachhilfelehrerin.
-  </p>
-  <p>
-    Du kannst also mit herausragenden didaktischen Fähigkeiten rechnen!
-  </p>
+  <div class="ueber-mich-inhalt">
+    <div class="ueber-mich-text">
+      <p>
+        Ich bin seit über drei Jahren als Trainerin im Bereich Cross Training, HIIT, funktionales Training und Langhanteltraining tätig. Meine eigene Leidenschaft gilt dem CrossFit und Kraftdreikampf – ich lebe, was ich coache.
+      </p>
+      <p>
+        Aktuell arbeite ich hauptberuflich als Mathematikerin in der Forschung – das heißt: analytisches Denken, Struktur und Präzision gehören ebenso zu mir wie Motivation, Begeisterung und Power. Außerdem war ich vier Jahre lang Mathematik-Tutorin an der Technischen Universität Berlin und 10 Jahre private Nachhilfelehrerin.
+      </p>
+      <p>
+        Du kannst also mit herausragenden didaktischen Fähigkeiten rechnen!
+      </p>
+    </div>
+    <div class="ueber-mich-bild">
+      <img src="images/foto.jpg" alt="Helia Shafigh" />
+    </div>
+  </div>
 </section>
 
 <section>
