--- a/ueber-mich.html
+++ b/ueber-mich.html
@@ -35,7 +35,7 @@
       </p>
     </div>
     <div class="ueber-mich-bild">
-      <img src="images/foto.jpg" alt="Helia Shafigh" />
+      <img src="images/foto.JPG" alt="Helia Shafigh" />
     </div>
   </div>
 </section>
