--- a/ueber-mich.html
+++ b/ueber-mich.html
@@ -40,7 +40,7 @@
   </div>
 </section>
 
-<section>
+<section class="qualifikationen">
   <h2>Meine Qualifikationen</h2>
   <ul>
     <li>Fitnesstrainer A-Lizenz</li>
