Modify personal training pricing and options
Updated the pricing for personal training sessions and added details about 1:2 training options.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <section id="leistungen">
   <h2>Meine Leistungen</h2>
 
-  <h3>Personal Training (1:1) (70€/h)</h3>
+  <h3>Personal Training (1:1 für 70€/h oder 1:2 für 100€/h)</h3>
   <ul>
     <li>Krafttraining & Langhanteltraining</li>
     <li>Muskelaufbau & Hypertrophietraining</li>
@@ -74,6 +74,7 @@
 
 </body>
 </html>
+
 
 
 
