Modify training course links and details
Updated links for outdoor and indoor training courses and adjusted the course start date.

--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
 
   <h3>Gruppentraining</h3>
   <ul>
-    <li><a href="https://www.tu-sport.de/sportprogramm/kurse/?tx_dwzeh_courses%5Baction%5D=show&tx_dwzeh_courses%5BsportsDescription%5D=1570&cHash=15b3be6dfad3a0bc6b11c879d441561a" target="_blank" rel="noopener noreferrer">Cross Training</a></li>
-    <li><a href="https://www.tu-sport.de/sportprogramm/kurse/?tx_dwzeh_courses%5Baction%5D=show&tx_dwzeh_courses%5BsportsDescription%5D=1640&cHash=186b46ddfcd3d434ec611de50e490e05" target="_blank" rel="noopener noreferrer">Krafttraining</a></li>
-    <li><a href="https://www.buchsys.de/fu-berlin/angebote/aktueller_zeitraum/_Langhantel_Workshop.html" target="_blank" rel="noopener noreferrer">Langhantel Workshop</a></li>
-    <li><a href="https://https://www.buchsys.de/fu-berlin/angebote/aktueller_zeitraum/_Cross-Training_Workshop.html" target="_blank" rel="noopener noreferrer">Cross Training Workshop</a></li>
+    <li><a href="https://www.tu-sport.de/sportprogramm/kurse/?tx_dwzeh_courses%5Baction%5D=show&tx_dwzeh_courses%5BsportsDescription%5D=1570&cHash=15b3be6dfad3a0bc6b11c879d441561a" target="_blank" rel="noopener noreferrer">Cross Training Outdoor</a></li>
+    <li><a href="https://www.buchsys.de/fu-berlin/angebote/aktueller_zeitraum/_Cross-Training.html target="_blank" rel="noopener noreferrer">Cross Training Indoor</a></li>
+    <li><a href="https://www.tu-sport.de/sportprogramm/kurse/?tx_dwzeh_courses%5Baction%5D=show&tx_dwzeh_courses%5BsportsDescription%5D=1640&cHash=186b46ddfcd3d434ec611de50e490e05" target="_blank" rel="noopener noreferrer">Krafttraining Outdoor</a></li>
+  
   </ul>
-  <p>Neuer Zyklus ab dem 21. Juli 2025. Für Details klicke auf den jeweiligen Kurs!</p>
+  <p>Die Outdoor Kurse finden ab März 2026 wieder statt. Für Details klicke auf den jeweiligen Kurs!</p>
 </section>
 
 <section id="coaching">
@@ -74,6 +74,7 @@
 
 </body>
 </html>
+
 
 
 
