Rephrase career description in ueber-mich.html

--- a/ueber-mich.html
+++ b/ueber-mich.html
@@ -28,7 +28,7 @@
         Ich bin seit über drei Jahren als Trainerin im Bereich Cross Training, HIIT, funktionales Training und Langhanteltraining tätig. Meine eigene Leidenschaft gilt dem CrossFit und Kraftdreikampf – ich lebe, was ich coache.
       </p>
       <p>
-        Aktuell arbeite ich hauptberuflich als Mathematikerin in der Forschung – das heißt: analytisches Denken, Struktur und Präzision gehören ebenso zu mir wie Motivation, Begeisterung und Power. Außerdem war ich vier Jahre lang Mathematik-Tutorin an der Technischen Universität Berlin und 10 Jahre private Nachhilfelehrerin.
+        Bevor ich meine Karriere als Personal Trainerin startete, habe ich hauptberuflich als Mathematikerin in der Forschung gearbeitet – das heißt: analytisches Denken, Struktur und Präzision gehören ebenso zu mir wie Motivation, Begeisterung und Power. Außerdem war ich vier Jahre lang Mathematik-Tutorin an der Technischen Universität Berlin und 10 Jahre private Nachhilfelehrerin.
       </p>
       <p>
         Du kannst also mit herausragenden didaktischen Fähigkeiten rechnen!
