--- a/preise.html
+++ b/preise.html
@@ -1,1 +1,58 @@
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Preise | Fit mit Helia</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
 
+<nav>
+  <ul>
+    <li><a href="index.html">Startseite</a></li>
+    <li><a href="preise.html">Preise</a></li>
+    <li><a href="ueber-mich.html">Über mich</a></li>
+    <li><a href="galerie.html">Galerie</a></li>
+  </ul>
+</nav>
+
+<header>
+  <h1>Preise & Konditionen</h1>
+</header>
+
+<section>
+  <h2>Personal Training (1:1)</h2>
+  <div class="preis-box">
+    <p style="font-size: 1.5rem; color: #7a977a; font-weight: bold;">100,00 € pro Stunde</p>
+    <ul>
+      <li>Individuelle Trainingsbetreuung</li>
+      <li>Inkl. Technik-Check & Trainingsplanung</li>
+      <li>Ort: Mittelstr. 34, Steglitz</li>
+      <li>Outdoor oder Home-Training auf Anfrage (ggf. zzgl. Fahrtkosten)</li>
+    </ul>
+  </div>
+</section>
+
+<section>
+  <h2>Gruppentraining</h2>
+  <p>Die Preise für das Gruppentraining (Cross Training & Krafttraining) richten sich nach den Tarifen des TU-Sport bzw. FU-Sport. Bitte klicke auf die Links auf der Startseite für die aktuellen Semesterpreise.</p>
+</section>
+
+<section>
+  <h2>Online Coaching & Beratung</h2>
+  <p>Individuelle Pakete für Ernährungsberatung oder langfristiges Online-Coaching auf Anfrage. Melde dich einfach für ein unverbindliches Erstgespräch!</p>
+</section>
+
+<section class="kontakt">
+  <h2>Jetzt Termin vereinbaren</h2>
+  <p>Schreib mir eine Nachricht und wir starten gemeinsam durch!</p>
+  <p><strong>E-Mail:</strong> <a href="mailto:helia7773@yahoo.com">helia7773@yahoo.com</a></p>
+</section>
+
+<footer>
+  <p>&copy; 2025 Fit mit Helia – Alle Rechte vorbehalten</p>
+</footer>
+
+</body>
+</html>
