--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <title>Fit mit Helia</title>
+  <title>Fit mit Helia | Personal Training</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-
 <nav>
   <ul>
-    <li><a href="index.html">Leistungen</a></li>
+    <li><a href="index.html">Startseite</a></li>
+    <li><a href="preise.html">Preise</a></li>
     <li><a href="ueber-mich.html">Über mich</a></li>
     <li><a href="galerie.html">Galerie</a></li>
   </ul>
@@ -32,7 +32,7 @@
 <section id="leistungen">
   <h2>Meine Leistungen</h2>
 
-  <h3>Personal Training (1:1 für 100€/h)</h3>
+  <h3>Personal Training (1:1)</h3>
   <ul>
     <li>Krafttraining & Langhanteltraining</li>
     <li>Muskelaufbau & Hypertrophietraining</li>
@@ -43,20 +43,19 @@
     <li>Ernährungsberatung</li>
     <li>Online-Coaching</li>
   </ul>
-   <p>In der Mittelstr. 34, Steglitz, oder bei Bedarf an einem anderen Ort wie draußen im Park oder bei dir zu Hause, falls kein Equipment benötigt wird oder bereits vorhanden ist (ggf. zzgl. Fahrtkosten).</p>
+   <p>In der Mittelstr. 34, Steglitz, oder bei Bedarf an einem anderen Ort wie draußen im Park oder bei dir zu Hause.</p>
 
   <h3>Gruppentraining</h3>
   <ul>
     <li><a href="https://www.tu-sport.de/sportprogramm/kurse/?tx_dwzeh_courses%5Baction%5D=show&tx_dwzeh_courses%5BsportsDescription%5D=1570&cHash=15b3be6dfad3a0bc6b11c879d441561a" target="_blank" rel="noopener noreferrer">Cross Training Outdoor</a></li>
-    <li><a href="https://www.buchsys.de/fu-berlin/angebote/aktueller_zeitraum/_Cross-Training.html target="_blank" rel="noopener noreferrer">Cross Training Indoor</a></li>
+    <li><a href="https://www.buchsys.de/fu-berlin/angebote/aktueller_zeitraum/_Cross-Training.html" target="_blank" rel="noopener noreferrer">Cross Training Indoor</a></li>
     <li><a href="https://www.tu-sport.de/sportprogramm/kurse/?tx_dwzeh_courses%5Baction%5D=show&tx_dwzeh_courses%5BsportsDescription%5D=1640&cHash=186b46ddfcd3d434ec611de50e490e05" target="_blank" rel="noopener noreferrer">Krafttraining Outdoor</a></li>
-  
   </ul>
   <p>Die Outdoor Kurse finden ab März 2026 wieder statt. Für Details klicke auf den jeweiligen Kurs!</p>
 </section>
 
 <section id="coaching">
-  <p><strong>Gerade, wenn du AnfängerIn bist, nicht weißt, wie du deine Fitness-Reise starten sollst und noch nicht an dich selbst glaubst:</strong> Ich begleite dich individuell, verständnisvoll und mit vollem Einsatz. Gemeinsam arbeiten wir smart, sicher und mit Herzblut an deiner Entwicklung – körperlich und mental.</p>
+  <p><strong>Gerade, wenn du AnfängerIn bist:</strong> Ich begleite dich individuell, verständnisvoll und mit vollem Einsatz. Gemeinsam arbeiten wir smart, sicher und mit Herzblut an deiner Entwicklung.</p>
   <p><strong>Melde dich bei mir und wir finden das passende Angebot für dich!</strong></p>
 </section>
 
@@ -74,6 +73,7 @@
 
 </body>
 </html>
+
 
 
 
