--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Fit mit Helia | Personal Training</title>
+   <title>Fit mit Helia</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
+
 <nav>
   <ul>
-    <li><a href="index.html">Startseite</a></li>
-    <li><a href="preise.html">Preise</a></li>
+    <li><a href="index.html">Leistungen</a></li>
     <li><a href="ueber-mich.html">Über mich</a></li>
+     <li><a href="preise.html">Preise</a></li>
     <li><a href="galerie.html">Galerie</a></li>
   </ul>
 </nav>
@@ -43,12 +44,9 @@
     <li>Ernährungsberatung</li>
     <li>Online-Coaching</li>
   </ul>
-   <p>In der Mittelstr. 34, Steglitz, oder bei Bedarf an einem anderen Ort wie draußen im Park oder bei dir zu Hause.</p>
-
-<section id="coaching">
-  <p><strong>Gerade, wenn du AnfängerIn bist:</strong> Ich begleite dich individuell, verständnisvoll und mit vollem Einsatz. Gemeinsam arbeiten wir smart, sicher und mit Herzblut an deiner Entwicklung.</p>
+   <p>In der Mittelstr. 34, Steglitz, oder bei Bedarf an einem anderen Ort wie draußen im Park oder bei dir zu Hause, falls kein Equipment benötigt wird oder bereits vorhanden ist.</p>
+  <p><strong>Gerade, wenn du AnfängerIn bist, nicht weißt, wie du deine Fitness-Reise starten sollst und noch nicht an dich selbst glaubst:</strong> Ich begleite dich individuell, verständnisvoll und mit vollem Einsatz. Gemeinsam arbeiten wir smart, sicher und mit Herzblut an deiner Entwicklung – körperlich und mental.</p>
   <p><strong>Melde dich bei mir und wir finden das passende Angebot für dich!</strong></p>
-</section>
 
 <section class="kontakt" id="kontakt">
   <h2>Kontakt</h2>
@@ -64,6 +62,7 @@
 
 </body>
 </html>
+
 
 
 
