--- a/ueber-mich.html
+++ b/ueber-mich.html
@@ -12,6 +12,7 @@
   <ul>
     <li><a href="index.html">Leistungen</a></li>
     <li><a href="ueber-mich.html">Über mich</a></li>
+     <li><a href="preise.html">Preise</a></li>
     <li><a href="galerie.html">Galerie</a></li>
   </ul>
 </nav>
