--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <li>Online-Coaching</li>
   </ul>
    <p>In der Mittelstr. 34, Steglitz, oder bei Bedarf an einem anderen Ort wie draußen im Park oder bei dir zu Hause, falls kein Equipment benötigt wird oder bereits vorhanden ist.</p>
-  <p><strong>Gerade, wenn du AnfängerIn bist, nicht weißt, wie du deine Fitness-Reise starten sollst und noch nicht an dich selbst glaubst:</strong> Ich begleite dich individuell, verständnisvoll und mit vollem Einsatz. Gemeinsam arbeiten wir smart, sicher und mit Herzblut an deiner Entwicklung – körperlich und mental.</p>
+  <p>Gerade, wenn du Anfänger_in bist, nicht weißt, wie du deine Fitness-Reise starten sollst und noch nicht an dich selbst glaubst: Ich begleite dich individuell, verständnisvoll und mit vollem Einsatz. Gemeinsam arbeiten wir smart, sicher und mit Herzblut an deiner Entwicklung – körperlich und mental.</p>
   <p><strong>Melde dich bei mir und wir finden das passende Angebot für dich!</strong></p>
 
 <section class="kontakt" id="kontakt">
@@ -62,6 +62,7 @@
 
 </body>
 </html>
+
 
 
 
