--- a/galerie.html
+++ b/galerie.html
@@ -10,7 +10,7 @@
 
 <nav>
   <ul>
-    <li><a href="index.html">Leistungen</a></li>
+    <li><a href="index.html">Startseite</a></li>
     <li><a href="ueber-mich.html">Über mich</a></li>
      <li><a href="preise.html">Preise</a></li>
     <li><a href="galerie.html">Galerie</a></li>
