--- a/ueber-mich.html
+++ b/ueber-mich.html
@@ -26,7 +26,7 @@
   <div class="ueber-mich-inhalt">
     <div class="ueber-mich-text">
       <p>
-        Ich bin seit über drei Jahren als Trainerin im Bereich Cross Training, HIIT, funktionales Training und Langhanteltraining tätig. Meine eigene Leidenschaft gilt dem CrossFit und Kraftdreikampf – ich lebe, was ich coache.
+        Ich bin seit ca. vier Jahren als Trainerin im Bereich Cross Training, HIIT, funktionales Training und Langhanteltraining tätig. Meine eigene Leidenschaft gilt dem CrossFit und Kraftdreikampf – ich lebe, was ich coache.
       </p>
       <p>
         Bevor ich meine Karriere als Personal Trainerin startete, habe ich hauptberuflich als Mathematikerin in der Forschung gearbeitet – das heißt: analytisches Denken, Struktur und Präzision gehören ebenso zu mir wie Motivation, Begeisterung und Power. Außerdem war ich vier Jahre lang Mathematik-Tutorin an der Technischen Universität Berlin und 10 Jahre private Nachhilfelehrerin.
