--- a/preise.html
+++ b/preise.html
@@ -65,6 +65,24 @@
     </tr>
   </table>
 
+  <h2>Personal Training für zwei (1:2)</h2>
+  <p>Für Paare, Freunde, Eltern-Kinder etc.: Trainiere zu zweit mit deinem Lieblingstrainingsparter.</p>
+  
+  <table class="preis-tabelle">
+    <tr>
+      <td>Einzelstunde (flexibel)</td>
+      <td class="highlight-preis">150 € / h (75 € pro Person)</td>
+    </tr>
+    <tr>
+      <td>Ab 4 Terminen pro Monat</td>
+      <td class="highlight-preis">130 € / h (65€ pro Person)</td>
+    </tr>
+    <tr>
+      <td>Ab 8 Terminen pro Monat</td>
+      <td class="highlight-preis">120 € / h (60€ pro Person)</td>
+    </tr>
+  </table>
+
   <p style="text-align: center; margin-top: 10px;">
     <em>In der Mittelstr. 34, Steglitz. Outdoor oder Home-Training auf Anfrage (ggf. zzgl. Fahrtkosten).</em>
   </p>
