--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <section id="leistungen">
   <h2>Meine Leistungen</h2>
 
-  <h3>Personal Training (1:1)</h3>
+  <h3>Personal Training:</h3>
   <ul>
     <li>Krafttraining & Langhanteltraining</li>
     <li>Muskelaufbau & Hypertrophietraining</li>
@@ -66,6 +66,7 @@
 
 </body>
 </html>
+
 
 
 
